--- a/sass/Menu.scss
+++ b/sass/Menu.scss
@@ -68,27 +68,228 @@
 	}
 }
 
+.sg-menu{
+	
+	padding: 0px;
+	margin: 0px;
+	.sg-menu:only-child{
+		border:4px solid red;
+		min-height: 20px;
+	}
+	
+	>.item{
+		list-style: none;
+		padding: 1px;
+		>.option{
+			text-decoration: none;
+			color:rgb(255, 255, 255);
+			background-color: rgba(0, 0, 0, 0.16);
+			height: 30px;
+			width: 100%;
+			display: flex;
+			//margin: 0 2px 0 2px ;
+			justify-content: flex-start;
+			align-items: center;
+			//color: rgba(118,118,118,1.00);
+			//border-bottom: 1px solid rgba(213,226,243,1.00);
+			
+			outline: 0;
+			
+			&:hover{
+				//background-color: rgba(224,224,224,1.00);
+				//color: rgba(7,97,192,1.00);
+				background-color: rgba(0,0,0,0.49);
+				color:aqua;
+			}
+			&:focus{
+				color: rgba(232,232,232,1.00);
+				background-color: rgba(0,0,0,0.25);
+				//color:rgba(164,72,73,1.00);
+			}
+			
+			> .checkbox{
+	
+			}
+			
+			> .icon{
+				height: 24px;
+				width: 24px;
+				//display:none;
+			}
+			
+			img{
+				height: 100%;
+				width: 100%;
+			}
+			
+			.text{
+				flex: 1 1 auto;
+				padding-left: 10px;
+				padding-right: 10px;
+			}
+			
+		}
+
+		&.open{
+			.ind{
+				float:right;
+				margin:10px;
+				width:6px;
+				height:3px;
+				margin-right: 12px;
+				background-size: 100%;
+				background-color: rgba(196,196,196,1.00);
+			}
+		}
+	
+		&.close{
+			.ind{
+				float:right;
+				margin:10px;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 6px 4px 0 4px;
+				border-color: #FFF500 transparent transparent transparent;
+				//background-repeat:no-repeat;
+				background-color: transparent;
+	
+			}
+		}
+	}
+
+	&.menu-accordion{
+		
+		>.item{
+			>.submenu{
+				padding-left: 16px;
+			}
+			&.open{
+				>.submenu{
+					max-height: 600px;
+					opacity: 1;
+					transition-duration: 0.5s;
+					transition-property: all;
+					transition-timing-function: ease-in;	
+				}
+			}
+			&.close{
+				>.submenu{
+					max-height: 0px;
+					overflow: hidden;
+					padding-left: 10px;
+					opacity: 0;
+					transition-duration: 0.2s;
+					transition-property: all;
+				}
+			}
+		}
+	}
+
+	&.menu-popup{
+		>.item{
+
+			>.submenu{
+				position: fixed;
+				background-color: rgba(61, 61, 61, 0.9);
+			}
+			&.open{
+				>.submenu{
+					visibility: visible;
+					opacity:1;
+			
+					//transform: scale(1.0);
+					transform-origin: 0 0;
+					//animation: open  5.5s ease-out ;
+					transition-duration: 0.5s;
+					transition-property: all;
+					transition-timing-function: ease-in;	
+				}
+			}
+			&.close{
+				>.submenu{
+					visibility: hidden;
+					opacity:0;
+			
+					transform: scale(0.5);
+					transform-origin: 0 0;
+					//animation: close  5.0s ease-out ;
+					transition-duration: 0.2s;
+					transition-property: all;
+					transition-timing-function: ease-in;
+	
+				}
+			}
+		}
+	}
+	&.horizontal{
+		.caption{
+			display:none;
+		}
+		.menu{
+			display: flex;
+			flex-wrap: wrap;
+		}
+		.item{
+			button{
+				border:0px;
+			}
+			
+			//display: inline-block!important;
+			.icon{
+				display:none;
+			}
+		}
+		
+		li{
+			display: inline-block!important;
+		}
+		
+	}
+
+}
+
+
+.yyy{
 .sg-menu.menu-popup{
+	
+	//position: absolute;
+	//left:200px;
+	//width: 200px;
+	//top:100px;
 	
 	.item{
 		
 		.submenu{
-			position: absolute;
+			position: fixed;
 			background-color: rgba(61, 61, 61, 0.9);
 		}
 		&.open{
 			
 			>.submenu{
-			
-				animation: open  0.5s ease-out forwards;
+				visibility: visible;
+				opacity:1;
+		
+				//transform: scale(1.0);
+    			transform-origin: 0 0;
+				//animation: open  5.5s ease-out ;
+				transition-duration: 0.5s;
+				transition-property: all;
+				transition-timing-function: ease-in;
 			}
 		}
 		&.close{
 			
 			>.submenu{
-			
-			
-				animation: close  0.5s ease-out forwards;
+				visibility: hidden;
+				opacity:0;
+		
+				transform: scale(0.5);
+				transform-origin: 0 0;
+				//animation: close  5.0s ease-out ;
+				transition-duration: 0.2s;
+				transition-property: all;
+				transition-timing-function: ease-in;
 			}
 		}
 	}
@@ -119,8 +320,10 @@
 		
 		.submenu.open{
 			animation: open  5.5s ease-out;
+			//visibility: visible;
 		}
 		.submenu.close{
+			//visibility: hidden;
 			animation: close  5.2s ease-out;
 			
 		}
@@ -200,6 +403,7 @@
 		padding:0px;
 		margin:0px;
 	}
+	
 	
 	li{
 		list-style:none;
@@ -303,7 +507,7 @@
 	}
 	
 }
-
+}
 
 .xxx{
 	
