--- a/gt/sass/gt.scss
+++ b/gt/sass/gt.scss
@@ -141,11 +141,11 @@ form{
 }
 
 .item:hover{
-	>a>.site-edit{
+	>a>.site-edit, .geofence-edit{
 		visibility: visible;
 	}
 }
-.site-edit{
+.site-edit, .geofence-edit{
 	width: 20px;
 	height:20px;
 	margin-right: 6px;
@@ -446,3 +446,45 @@ form{
 	}
 }
 
+
+.icon-unit{
+	background-image: url(../../images/unit.png);
+}
+.icon-marker_001{
+	background-image: url(../../images/marker_001.png);
+}
+.icon-info{
+	background-image: url(../../images/info.png);
+}
+.icon-pentagon{
+	background-image: url(../../images/pentagon.png);
+}
+.icon-clock_001{
+	background-image: url(../../images/clock_001.png);
+}
+.icon-calendar{
+	background-image: url(../../images/calendar.png);
+}
+.sg-menu.webcar-menu{
+	
+	.item{
+		
+		a{
+			
+			.image{
+				width: 40px;
+				height: 40px;
+				background-repeat: no-repeat;
+				background-position: center center;	
+				background-size: 24px 24px;
+				width: 24px;
+				height: 24px;	
+			}
+			.text{
+				display: none;
+			}
+		}
+
+
+	}
+}
