--- a/gt/sass/cota.scss
+++ b/gt/sass/cota.scss
@@ -266,22 +266,23 @@
 		
 	}
 	.page{
+    //border: 10px solid transparent;
     overflow: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    //align-items: stretch;
-    //justify-content: space-between;
-    padding: 10px;
-    >*{
-      //flex:0 0 auto;
-    }
+    display: grid;
+    grid-gap: 5px;
+    padding: 4px;
+    grid-template-columns: repeat(auto-fit,  [cc-start] minmax(180px, 1fr) [cc-end]);
+    align-content: start;   
+    justify-content: center; 
+    
+    
 		.field{
-      //border:1px solid white;
-      padding: 5px 0px 10px 0px;
-      min-width: 50%;
-      height: auto;
+      
+      
+      padding: 10px;
+      background-color: rgba(255, 255, 255, 0.8);
+      border-radius: 4px;
+      
 			.label{
 				color: rgb(71, 71, 71);
 				text-transform: uppercase;
@@ -299,7 +300,7 @@
 				font-size: 0.8em;
 				padding: 4px;
 				font-family: futurab;
-				width: auto;
+				width: 100%;
       }
       
 		}
