--- a/gt/css/gt.css
+++ b/gt/css/gt.css
@@ -35,17 +35,27 @@ form {
   grid-template-rows: 60px auto 1fr;
   height: 100%;
   overflow: auto;
-  background: #f33939;
+  background: black;
 }
 .gt-layout > .banner {
   grid-row: 1;
   grid-column: 1;
-  background-color: #d80e0e;
+  background-color: #003b38;
 }
 .gt-layout > .menu {
   grid-row: 2;
   grid-column: 1;
-  background-color: #494949;
+  background-color: #0d838b;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .gt-layout > .body {
   grid-row: 3;
@@ -413,16 +423,85 @@ form {
   background-image: url(../../images/calendar.png);
 }
 
+.icon-setting {
+  background-image: url(../../images/setting_001.png);
+}
+
+.icon-exit_001 {
+  background-image: url(../../images/exit_001.png);
+}
+
+.icon-events {
+  background-image: url(../../images/events.png);
+}
+
+.icon-search {
+  background-image: url(../../images/search.png);
+}
+
 .sg-menu.webcar-menu .item a .image {
-  width: 40px;
-  height: 40px;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 24px 24px;
-  width: 24px;
+  width: 30px;
   height: 24px;
 }
 .sg-menu.webcar-menu .item a .text {
   display: none;
+}
+
+.banner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  justify-items: stretch;
+}
+.banner > * {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+.banner .logo-bestsecurity {
+  padding-left: 10px;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+.banner .logo-bestsecurity img {
+  height: 50px;
+}
+.banner .logo-webcar {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  text-align: right;
+  font-size: 20pt;
+  color: white;
+  text-transform: capitalize;
+  font-family: andreab;
+  justify-self: right;
+  -ms-flex-item-align: center;
+      align-self: center;
+  padding-right: 10px;
+}
+
+.sgWin {
+  border: 2px solid #176469 !important;
+}
+.sgWin > .caption {
+  background-color: #003b38 !important;
+}
+
+.unit-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 /*# sourceMappingURL=gt.css.map */
