--- a/gt/sass/cota.scss
+++ b/gt/sass/cota.scss
@@ -47,30 +47,84 @@
 .cota-main{
 	
 }
+.units-popup{
+  background-color: rgb(255, 255, 255);
+  max-height: 200px;
+  width: 200px;
+  overflow: auto;
+  //padding: 4px;
+    //color:rgb(29, 117, 158);
+   
+    
+    display: grid;
+    
+    overflow: auto;
+    grid-gap: 2px;
+    text-transform: uppercase;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    align-content: start; 
+    .unit-name{
+      text-align: center;
+      font-weight: bold;
+      color: rgb(9, 126, 91);
+    }
+    >div{
+      background-color: rgb(247, 247, 247);
+      //
+      //padding: 2px;
+      >*{
+        padding: 2px;
+        display: inline;
+      }
+      >:nth-child(1){
+        
+        color:rgb(151, 151, 151);
 
+        font-size: 10px;
+      }
+      >:nth-child(2){
+        padding-left: 8px;
+        color:rgb(114, 114, 114);
+        font-size: 12px;
+        //font-weight: bold;
+        
+      }
+    }
+}
 .units-info{
-    padding: 2px;
-    color:white;
-    font-size: 11px;
-    min-width: 240px;
+  
+  
+   
+    padding: 4px;
+    //color:rgb(29, 117, 158);
+    font-size: 13px;
+    //min-width: 240px;
     display: grid;
     height: 100%;
     overflow: auto;
-    //grid-gap: 2px;
+    grid-gap: 5px;
     text-transform: uppercase;
-    grid-template-columns: auto 1fr;
-    //grid-template-rows: 36px 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    align-content: start; 
     >div{
-      //margin-top: 1px;
-      //border-bottom: 1px solid white;
-      background-color: rgba(102, 102, 102, 0.575);
-      padding: 3px;
-    }
+      background-color: rgba(87, 87, 87, 0.555);
+      //
+      padding: 5px;
+      >:nth-child(1){
+        padding-left: 10px;
+        color:rgb(253, 238, 32);
 
-    >div:nth-child(2n+1){
-      color: rgb(146, 146, 146);
-      font-weight: bold;
+        font-size: 11px;
+      }
+      >:nth-child(2){
+        color:rgb(182, 182, 182);
+        font-size: 13px;
+        //font-weight: bold;
+        margin-top: 5px;
+      }
     }
+    
+    
 
 
   }
