--- a/templates/gt-webcar.html
+++ b/templates/gt-webcar.html
@@ -1,6 +1,11 @@
 <div class="gt-layout gt-webcar">
-	<div class="banner">--100--</div>
-	<div class="menu">--2--</div>
+	<div class="banner">
+		<div class="logo-bestsecurity"><img src="{@PATH_IMAGES}best_logo.png"></div>
+		<div class="logo-webcar">Webc@r</div>
+
+
+	</div>
+	<div class="menu">--2----3--</div>
 	<div class="body">--4--</div>
 </div>
 <!--
