--- a/templates/gt-webcar.html
+++ b/templates/gt-webcar.html
@@ -6,7 +6,7 @@
 
 	</div>
 	<div class="menu">--2----3--</div>
-	<div class="body">--4--</div>
+	<div class="body">--4----5----6--</div>
 </div>
 
 <div id="w001ch" class="subwin">--50----51--</div>
