--- a/templates/gt-webcar2.html
+++ b/templates/gt-webcar2.html
@@ -9,4 +9,5 @@
 	<div class="body">--4----5----10--</div>
 </div>
 
-<div style="display: none;" id="w001ch" class="subwin">--5----6----50----51--</div>
+<div id="win_001" class="subwin">--50----51--</div>
+<div id="win_002" class="subwin">--52----53--</div>
