--- a/templates/gt-webcar.html
+++ b/templates/gt-webcar.html
@@ -9,4 +9,4 @@
 	<div class="body">--4--</div>
 </div>
 
-<div style="display: none;" id="w001ch" class="subwin">--5----6----50----51--</div>
+<div id="win_001" class="subwin">--50----51--</div>
