--- a/gt/css/cota.css
+++ b/gt/css/cota.css
@@ -308,4 +308,8 @@
   background-color: rgba(32, 32, 32, 0.6);
   padding: 6px;
 }
+
+.debug {
+  background-color: white;
+}
 /*# sourceMappingURL=cota.css.map */
