--- a/gt/sass/gt.scss
+++ b/gt/sass/gt.scss
@@ -177,6 +177,17 @@ form{
 	background-position: center center;
 	background-size: 20px 20px;
 }
+.icon-command{
+	background-image: url(../../images/command.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+.icon-catalogue{
+	background-image: url(../../images/catalogue.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
 
 .item:hover{
 	>a>.site-edit, .geofence-edit{
