--- a/gt/css/gt.css
+++ b/gt/css/gt.css
@@ -198,6 +198,20 @@ form {
   background-position: center center;
 }
 
+.gt-button {
+  background-color: #0d838b;
+  width: 26px;
+  height: 26px;
+  background-size: 26px 26px;
+  border: 0px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 26px;
+  vertical-align: top;
+  padding: 0px !important;
+}
+
 .item:hover > a > .site-edit, .item:hover .geofence-edit {
   visibility: visible;
 }
