--- a/css/gt.css
+++ b/css/gt.css
@@ -187,9 +187,25 @@ form {
 }
 
 .icon-command {
-  background-image: url(../../images/Command.png);
+  background-image: url(../../images/command.png);
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+.icon-catalogue {
+  background-image: url(../../images/catalogue.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.gt-button {
+  background-color: #0d838b;
+  width: 26px;
+  height: 26px;
+  background-size: 26px 26px;
+  border: 0px;
+  color: width;
+  font-size: 20pt;
 }
 
 .item:hover > a > .site-edit, .item:hover .geofence-edit {
