--- a/css/cota.css
+++ b/css/cota.css
@@ -43,24 +43,66 @@
   grid-column: 1/5;
 }
 
-.units-info {
+.units-popup {
+  background-color: white;
+  max-height: 200px;
+  width: 200px;
+  overflow: auto;
+  display: grid;
+  overflow: auto;
+  grid-gap: 2px;
+  text-transform: uppercase;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  -ms-flex-line-pack: start;
+      align-content: start;
+}
+.units-popup .unit-name {
+  text-align: center;
+  font-weight: bold;
+  color: #097e5b;
+}
+.units-popup > div {
+  background-color: #f7f7f7;
+}
+.units-popup > div > * {
   padding: 2px;
-  color: white;
-  font-size: 11px;
-  min-width: 240px;
+  display: inline;
+}
+.units-popup > div > :nth-child(1) {
+  color: #979797;
+  font-size: 10px;
+}
+.units-popup > div > :nth-child(2) {
+  padding-left: 8px;
+  color: #727272;
+  font-size: 12px;
+}
+
+.units-info {
+  padding: 4px;
+  font-size: 13px;
   display: grid;
   height: 100%;
   overflow: auto;
+  grid-gap: 5px;
   text-transform: uppercase;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  -ms-flex-line-pack: start;
+      align-content: start;
 }
 .units-info > div {
-  background-color: rgba(102, 102, 102, 0.575);
-  padding: 3px;
+  background-color: rgba(87, 87, 87, 0.555);
+  padding: 5px;
 }
-.units-info > div:nth-child(2n+1) {
-  color: #929292;
-  font-weight: bold;
+.units-info > div > :nth-child(1) {
+  padding-left: 10px;
+  color: #fdee20;
+  font-size: 11px;
+}
+.units-info > div > :nth-child(2) {
+  color: #b6b6b6;
+  font-size: 13px;
+  margin-top: 5px;
 }
 
 .wecar_info {
@@ -145,5 +187,129 @@
   opacity: 0;
   -webkit-transition: visibility 0.9s linear, opacity 0.9s linear;
   transition: visibility 0.9s linear, opacity 0.9s linear;
+}
+
+.subwin .sg-form, #form_p10 .sg-form {
+  overflow: auto;
+  background-color: rgba(255, 255, 255, 0.863);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+.subwin .sg-form .caption, #form_p10 .sg-form .caption {
+  background-color: #dd6018;
+  text-align: center;
+  font-size: 13px;
+  line-height: 2em;
+  font-weight: bold;
+  vertical-align: middle;
+  color: #e0e0e0;
+}
+.subwin .sg-form .page, #form_p10 .sg-form .page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  overflow: auto;
+}
+.subwin .sg-form .page .field, #form_p10 .sg-form .page .field {
+  padding: 4px;
+}
+.subwin .sg-form .page .field label, #form_p10 .sg-form .page .field label {
+  color: #138bbb;
+  font-size: 13px;
+  padding-left: 10px;
+}
+.subwin .sg-form .page .field input, #form_p10 .sg-form .page .field input {
+  border: 1px solid #b8b8b8;
+  color: #7a7a7a;
+  font-size: 12px;
+  line-height: 1.8em;
+  background-color: white;
+  padding-left: 4px;
+}
+.subwin .sg-form .sg-menu, #form_p10 .sg-form .sg-menu {
+  background-color: #e4e4e4;
+  padding: 4px;
+  border: 2px solid #ececec;
+  margin-top: 10px;
+}
+.subwin .sg-form .sg-menu .menu, #form_p10 .sg-form .sg-menu .menu {
+  float: right;
+}
+.subwin .sg-form .sg-menu .option, #form_p10 .sg-form .sg-menu .option {
+  line-height: 2em;
+  background-color: #ff8800;
+  color: #e7e7e7;
+  border: 2px solid #ececec;
+  cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+}
+
+.sg-form.webcar {
+  background-color: rgba(255, 255, 255, 0.664);
+  width: auto;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+.sg-form.webcar .caption {
+  display: inherit;
+  color: white;
+  text-align: center;
+  background-color: rgba(99, 99, 99, 0.7);
+  line-height: 2em;
+  vertical-align: middle;
+}
+.sg-form.webcar .caption .text {
+  font-size: 12pt;
+  text-transform: uppercase;
+  font-family: futurab !important;
+}
+.sg-form.webcar .page {
+  overflow: auto;
+  display: grid;
+  grid-gap: 5px;
+  padding: 4px;
+  grid-template-columns: repeat(auto-fit, [cc-start] minmax(180px, 1fr) [cc-end]);
+  -ms-flex-line-pack: start;
+      align-content: start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.sg-form.webcar .page .field {
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 4px;
+}
+.sg-form.webcar .page .field .label {
+  color: #474747;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  padding-bottom: 10px;
+  font-family: futurab;
+  padding-left: 10px;
+}
+.sg-form.webcar .page .field input, .sg-form.webcar .page .field textarea, .sg-form.webcar .page .field select {
+  background-color: #e7e7e7;
+  color: #6d6d6d;
+  border: 0px;
+  font-size: 0.8em;
+  padding: 4px;
+  font-family: futurab;
+  width: 100%;
+}
+.sg-form.webcar .sg-menu {
+  background-color: rgba(32, 32, 32, 0.6);
+  padding: 6px;
+}
+
+.debug {
+  background-color: white;
 }
 /*# sourceMappingURL=cota.css.map */
