--- a/gt/sass/gt.scss
+++ b/gt/sass/gt.scss
@@ -188,6 +188,14 @@ form{
 	background-position: center center;
 }
 
+.icon-timelapse{
+	background-image: url(../../images/timelapse.png);
+}
+
+.icon-connection{
+	background-image: url(../../images/connection.png);
+}
+
 
 .gt-button{
 	background-color: #0d838b;
