--- a/css/gt_grid.css
+++ b/css/gt_grid.css
@@ -1,4 +1,5 @@
 .gt-comm {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,6 +11,7 @@
 
 .sg-grid {
   font-size: 9pt;
+  height: 100%;
   overflow: auto;
   display: -webkit-box;
   display: -ms-flexbox;
