--- a/gt/css/gt.css
+++ b/gt/css/gt.css
@@ -206,6 +206,14 @@ form {
   background-image: url(../../images/connection.png);
 }
 
+.icon-connected {
+  background-image: url(../../images/connected.png);
+}
+
+.icon-disconnected {
+  background-image: url(../../images/disconnected.png);
+}
+
 .gt-button {
   background-color: #0d838b;
   width: 26px;
