--- a/gt/css/gt_grid.css
+++ b/gt/css/gt_grid.css
@@ -1,3 +1,13 @@
+.gt-comm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .sg-grid {
   font-size: 9pt;
   overflow: auto;
