--- a/gt/sass/gt.scss
+++ b/gt/sass/gt.scss
@@ -195,7 +195,12 @@ form{
 .icon-connection{
 	background-image: url(../../images/connection.png);
 }
-
+.icon-connected{
+	background-image: url(../../images/connected.png);
+}
+.icon-disconnected{
+	background-image: url(../../images/disconnected.png);
+}
 
 .gt-button{
 	background-color: #0d838b;
