--- a/gt/sass/gt_grid.scss
+++ b/gt/sass/gt_grid.scss
@@ -1,5 +1,5 @@
 .gt-comm{
-
+	height: 100%;
 
 
 	display: flex;
@@ -11,7 +11,7 @@
 	
 	font-size: 9pt;
   
-	//height: 100%;
+	height: 100%;
 	//border:2px solid #52565a;
 	overflow: auto;
 	display: flex;
