--- a/templates/gt-webcar.html
+++ b/templates/gt-webcar.html
@@ -5,7 +5,7 @@
 
 
 	</div>
-	<div class="menu">--2----3----5--</div>
+	<div class="menu">--2----3----6----5--</div>
 	<div class="body">--4--</div>
 </div>
 
