--- a/css/Menu.css
+++ b/css/Menu.css
@@ -77,7 +77,7 @@
     opacity: 0;
   }
   100% {
-    max-height: 600px;
+    max-height: 1200px;
     opacity: 1;
   }
 }
@@ -89,13 +89,13 @@
     opacity: 0;
   }
   100% {
-    max-height: 600px;
+    max-height: 1200px;
     opacity: 1;
   }
 }
 @-webkit-keyframes acc-close {
   0% {
-    max-height: 600px;
+    max-height: 1200px;
     opacity: 1;
   }
   100% {
@@ -105,7 +105,7 @@
 }
 @keyframes acc-close {
   0% {
-    max-height: 600px;
+    max-height: 1200px;
     opacity: 1;
   }
   100% {
@@ -188,7 +188,8 @@
   padding-left: 16px;
 }
 .sg-menu.menu-accordion > .item.open > .submenu {
-  max-height: 600px;
+  max-height: 3000px;
+  overflow: auto;
   opacity: 1;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
