--- a/css/gt.css
+++ b/css/gt.css
@@ -2,17 +2,14 @@
   font-family: Hemihead;
   src: url(fonts\/HEMIHEAD.TTF);
 }
-
 @font-face {
   font-family: andreab;
   src: url(fonts\/ADRRDB.TTF);
 }
-
 @font-face {
   font-family: futurab;
   src: url(fonts\/FUTURABI.TTF);
 }
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -33,29 +30,20 @@ form {
 }
 
 .gt-layout {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 60px auto 1fr;
-      grid-template-rows: 60px auto 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px auto 1fr;
   height: 100%;
   overflow: auto;
   background: black;
 }
-
 .gt-layout > .banner {
-  -ms-grid-row: 1;
   grid-row: 1;
-  -ms-grid-column: 1;
   grid-column: 1;
   background-color: #003b38;
 }
-
 .gt-layout > .menu {
-  -ms-grid-row: 2;
   grid-row: 2;
-  -ms-grid-column: 1;
   grid-column: 1;
   background-color: #0d838b;
   display: -webkit-box;
@@ -70,11 +58,8 @@ form {
           justify-content: space-between;
   justify-items: stretch;
 }
-
 .gt-layout > .body {
-  -ms-grid-row: 3;
   grid-row: 3;
-  -ms-grid-column: 1;
   grid-column: 1;
   background-color: #66c725;
 }
@@ -82,18 +67,15 @@ form {
 .rule-tool-main {
   line-height: 2.5em;
 }
-
 .rule-tool-main .rule-tool-text {
   min-width: 100px;
   background-color: rgba(0, 0, 0, 0.61);
   color: white;
   text-align: right;
 }
-
 .rule-tool-main .rule-tool-value {
   margin: 4px;
 }
-
 .rule-tool-main .rule-tool-unit {
   font-weight: bold;
   margin: 4px;
@@ -265,7 +247,6 @@ form {
   background-color: rgba(255, 255, 255, 0.61);
   width: 300px;
 }
-
 .mark-tool-value .mark-tool-g1 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -274,7 +255,6 @@ form {
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
-
 .mark-tool-value .mark-tool-g1 input {
   width: 100px;
   border: 1px solid white;
@@ -284,7 +264,6 @@ form {
   font-size: 13px;
   line-height: 1.4em;
 }
-
 .mark-tool-value .mark-tool-g2 {
   border: 3px solid white;
   height: 120px;
@@ -297,27 +276,23 @@ form {
   -ms-flex-line-pack: stretch;
       align-content: stretch;
   /*
-		display: grid;
-		grid-template-columns: repeat(8, 30px);
-		gap: 5px;
-		*/
+  display: grid;
+  grid-template-columns: repeat(8, 30px);
+  gap: 5px;
+  */
 }
-
 .mark-tool-value .mark-tool-g2 * > {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
-
 .mark-tool-value .mark-tool-g2 div {
   width: 30px;
   height: 30px;
 }
-
 .mark-tool-value .mark-tool-g2 div :hover {
   cursor: pointer;
 }
-
 .mark-tool-value .mark-tool-g2 div img {
   width: 100%;
   max-height: 100%;
@@ -330,19 +305,14 @@ form {
   line-height: 2em;
   width: 100%;
 }
-
 .poly-tool-main .poly-tool-info .info {
   text-align: right;
 }
-
 .poly-tool-main .poly-tool-info .propertys {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 5px;
 }
-
 .poly-tool-main .poly-tool-info .propertys input {
   width: 100%;
 }
@@ -364,15 +334,11 @@ form {
           align-items: center;
   padding: 100px;
 }
-
 .gt-webcar-login .main {
-  display: -ms-grid;
   display: grid;
   border-radius: 10px;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
   height: 100%;
   width: 800px;
   overflow: auto;
@@ -382,69 +348,49 @@ form {
   background-clip: content-box;
   background-attachment: fixed;
 }
-
 .gt-webcar-login .main form {
   height: auto;
 }
-
 .gt-webcar-login .main > .left-side {
-  -ms-grid-row: 1;
   grid-row: 1;
-  -ms-grid-column: 1;
   grid-column: 1;
   background-color: rgba(0, 0, 0, 0.445);
   overflow: auto;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 100px auto 30px;
-      grid-template-rows: 100px auto 30px;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px auto 30px;
 }
-
 .gt-webcar-login .main > .left-side .webcar-name {
   font-size: 20pt;
   color: white;
   text-transform: capitalize;
   font-family: andreab;
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   text-align: center;
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
-
 .gt-webcar-login .main > .left-side .gtrack-logo {
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
   width: 180px;
 }
-
 .gt-webcar-login .main > .left-side .webcar-foot {
   color: snow;
   font-size: 8pt;
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   text-align: center;
 }
-
 .gt-webcar-login .main > .right-side {
-  -ms-grid-row: 1;
   grid-row: 1;
-  -ms-grid-column: 2;
   grid-column: 2;
   overflow: auto;
   border-left: 2px solid #ffde4c;
   background-color: rgba(0, 0, 0, 0.616);
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr;
-      grid-template-columns: 2fr;
-  -ms-grid-rows: 100px auto 120px;
-      grid-template-rows: 100px auto 120px;
+  grid-template-columns: 2fr;
+  grid-template-rows: 100px auto 120px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -452,36 +398,28 @@ form {
       -ms-flex-align: center;
           align-items: center;
 }
-
 .gt-webcar-login .main > .right-side .webcar-name {
   font-size: 20pt;
   color: white;
   text-transform: capitalize;
   font-family: andreab;
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   text-align: center;
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
-
 .gt-webcar-login .main > .right-side form {
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
 }
-
 .gt-webcar-login .main > .right-side form .menu {
   background-color: #1aa35e;
   margin-top: 10px;
 }
-
 .gt-webcar-login .main > .right-side form .menu .item {
   width: 100%;
 }
-
 .gt-webcar-login .main > .right-side form .menu .item .text {
   text-align: center;
   font-size: 14pt;
@@ -489,12 +427,9 @@ form {
   text-transform: capitalize;
   font-family: futurab;
 }
-
 .gt-webcar-login .main > .right-side .gtrack-logo {
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
   width: 180px;
 }
@@ -508,17 +443,14 @@ form {
       -ms-flex-direction: row;
           flex-direction: row;
 }
-
 .sg-form.flat > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
-
 .sg-form.flat .caption {
   display: none;
 }
-
 .sg-form.flat .page {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -533,19 +465,15 @@ form {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .sg-form.flat .page > .field *:not(.option) {
   height: 100%;
 }
-
 .sg-form.flat .page > .field > .label {
   display: none;
 }
-
 .sg-form.flat .page > .field > .input {
   padding: 2px;
 }
-
 .sg-form.flat .page > .field > .input input {
   background-color: #f8f8f8;
   color: #6d6d6d;
@@ -556,23 +484,19 @@ form {
 .-sg-form {
   width: 300px;
 }
-
 .-sg-form .caption {
   display: none;
   color: #f7f7f7;
   text-align: center;
 }
-
 .-sg-form .caption .text {
   font-size: 12pt;
   text-transform: uppercase;
   font-family: futurab !important;
 }
-
 .-sg-form .page .field {
   padding: 5px 0px 10px 0px;
 }
-
 .-sg-form .page .field .label {
   color: #d2ebff;
   text-transform: uppercase;
@@ -581,7 +505,6 @@ form {
   font-family: futurab;
   padding-left: 10px;
 }
-
 .-sg-form .page .field input {
   background-color: #e7e7e7;
   color: #6d6d6d;
@@ -595,17 +518,15 @@ form {
 ._sg-menu-.s {
   margin-top: 50px;
 }
-
 ._sg-menu- .item.open > .sub-menu {
   border: 3px solid #0077ff;
-  -webkit-animation: acc-open  0.5s ease-out forwards;
-          animation: acc-open  0.5s ease-out forwards;
+  -webkit-animation: acc-open 0.5s ease-out forwards;
+          animation: acc-open 0.5s ease-out forwards;
 }
-
 ._sg-menu- .item.close > .sub-menu {
   border: 3px solid red;
-  -webkit-animation: acc-close  0.5s ease-out forwards;
-          animation: acc-close  0.5s ease-out forwards;
+  -webkit-animation: acc-close 0.5s ease-out forwards;
+          animation: acc-close 0.5s ease-out forwards;
 }
 
 .icon-unit {
@@ -648,6 +569,18 @@ form {
   background-image: url(../images/search.png);
 }
 
+.icon-comm-alert {
+  background-image: url(../images/alert.png);
+}
+
+.icon-comm-alarm {
+  background-image: url(../images/alarm.png);
+}
+
+.icon-comm-message {
+  background-image: url(../images/message.png);
+}
+
 .sg-menu.webcar-menu .item a .image {
   background-repeat: no-repeat;
   background-position: center center;
@@ -655,8 +588,31 @@ form {
   width: 30px;
   height: 24px;
 }
-
 .sg-menu.webcar-menu .item a .text {
+  display: none;
+}
+
+.sg-menu.comm-menu .item a .image {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 16px 16px;
+  width: 30px;
+  height: 24px;
+}
+.sg-menu.comm-menu .item a .text {
+  background-color: #fdfa30;
+  border-radius: 20%;
+  padding: 1px;
+  position: absolute;
+  -webkit-transform: translate(15px, -10px);
+          transform: translate(15px, -10px);
+  color: #777777;
+  font-weight: bold;
+  min-width: 12px;
+  text-align: center;
+  font-size: 10px;
+}
+.sg-menu.comm-menu .item a .text:empty {
   display: none;
 }
 
@@ -670,24 +626,19 @@ form {
           flex-direction: row;
   justify-items: stretch;
 }
-
 .banner > * {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
 }
-
 .banner .logo-bestsecurity {
   padding-left: 10px;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
 }
-
 .banner .logo-bestsecurity img {
   height: 50px;
 }
-
 .banner .logo-webcar {
   -webkit-box-flex: 1;
       -ms-flex: 1 1;
@@ -697,10 +648,8 @@ form {
   color: white;
   text-transform: capitalize;
   font-family: andreab;
-  -ms-grid-column-align: right;
-      justify-self: right;
+  justify-self: right;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
   padding-right: 10px;
 }
@@ -708,7 +657,6 @@ form {
 .sgWin {
   border: 2px solid #176469 !important;
 }
-
 .sgWin > .caption {
   background-color: #003b38 !important;
 }
@@ -729,7 +677,6 @@ form {
   white-space: nowrap;
   background-color: rgba(255, 255, 255, 0.288);
 }
-
 .trace-tool .trace-nav button {
   width: 29px;
   height: 29px;
@@ -743,9 +690,44 @@ form {
   background-color: transparent;
   cursor: pointer;
 }
-
 .trace-tool .trace-layer {
   width: 200px;
   min-height: 200px;
+}
+
+.info-comm .main {
+  font-size: 10pt;
+  color: #f4f7e0;
+  background-color: #797979;
+  display: grid;
+  grid-gap: 4px;
+  grid-template-columns: repeat(3, 80px) auto;
+  grid-template-rows: auto auto;
+  overflow: auto;
+}
+.info-comm .main > * {
+  padding: 2px;
+  border: 1px solid yellow;
+}
+.info-comm .main > :nth-child(1) {
+  background-color: rgba(0, 0, 0, 0.637);
+}
+.info-comm .main > :nth-child(4) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.info-comm .main > :nth-child(5) {
+  grid-column: 1/5;
+  grid-row: 2;
+  background-color: rgba(209, 24, 24, 0.808);
+}
+.info-comm .main:not(.open) > :nth-child(5) {
+  display: none;
+}
+.info-comm .main > .detail {
+  display: grid;
+  grid-gap: 4px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
 }
 /*# sourceMappingURL=gt.css.map */
