--- a/sass/gt.scss
+++ b/sass/gt.scss
@@ -763,33 +763,92 @@ form{
 .info-comm{
 
 	.main{
-		font-size: 10pt;
+		font-size: 9pt;
 		color: rgb(244, 247, 224);
-		background-color: #797979;
+		background-color: #3a3a3aa9;
 		
 		display: grid;
 		grid-gap: 4px;
-		grid-template-columns: repeat(3, 80px) auto;
+		grid-template-columns: 20px repeat(3, 70px) auto 20px;
 		grid-template-rows: auto auto;
-		overflow: auto;
+		overflow: hidden;
+		.btn-new{
+			color: #1cbaf8;
+			text-align: center;
+			font-size: 10pt;
+			font-weight: bold;
+		}
+		.btn-delete{
+			color: #f0fa9a;
+			text-align: center;
+			font-size: 10pt;
+			//font-weight: bold;
+		}
+		&:hover{
+			cursor: pointer;
+			background-color: #000000;
+			//color:rgb(174, 236, 255);
+
+		}
+		&.new{
+			background-color: #a10c0ca9;
+		}
+		.type{
+			&[data-type="1"]{
+				background-color: #49e202;
+				color:white;
+			}
+			&[data-type="2"]{
+				background-color: #d1d1d1;
+				color:rgb(119, 119, 119);
+			}
+			&[data-type="3"]{
+				background-color: #0d838b;
+				color:white;
+			}
+			&[data-type="4"]{
+				background-color: #18e4f3;
+				color:rgb(94, 94, 94);
+			}
+			&[data-type="5"]{
+				background-color: #f8f41c;
+				color:rgb(255, 0, 0);
+			}
+			&[data-type="6"]{
+				background-color: #ff7f07;
+				color:white;
+			}
+			&[data-type="7"]{
+				background-color: #f34bd7;
+				color:white;
+			}
+			&[data-type="8"]{
+				background-color: #0d838b;
+				color:white;
+			}
+		}
+
+		
+		
 		>*{
 			padding: 2px;
-			border:1px solid yellow;
+			//border:1px solid yellow;
 		}
 		>:nth-child(1){
 			
-			background-color: rgba(0, 0, 0, 0.637);
+			//background-color: rgba(0, 0, 0, 0.637);
 		}
-		>:nth-child(4){
-			
+		>:nth-child(5){
+			//word-wrap: normal;
+			white-space: nowrap;
 			overflow: hidden;
 			
 			text-overflow: ellipsis;
 		}
-		>:nth-child(5){
+		>:nth-child(7){
 			
 			
-			grid-column: 1/5;
+			grid-column: 1/7;
 			grid-row: 2;
 			
 			
@@ -798,7 +857,7 @@ form{
 
 		}
 		&:not(.open){
-			>:nth-child(5){
+			>:nth-child(7){
 				
 				
 				display: none;
@@ -807,7 +866,7 @@ form{
 			}
 		}	
 		&.open{
-			>:nth-child(5){
+			>:nth-child(6){
 				
 				
 				
