--- a/css/gt.css
+++ b/css/gt.css
@@ -696,32 +696,79 @@ form {
 }
 
 .info-comm .main {
-  font-size: 10pt;
+  font-size: 9pt;
   color: #f4f7e0;
-  background-color: #797979;
+  background-color: #3a3a3aa9;
   display: grid;
   grid-gap: 4px;
-  grid-template-columns: repeat(3, 80px) auto;
+  grid-template-columns: 20px repeat(3, 70px) auto 20px;
   grid-template-rows: auto auto;
-  overflow: auto;
+  overflow: hidden;
+}
+.info-comm .main .btn-new {
+  color: #1cbaf8;
+  text-align: center;
+  font-size: 10pt;
+  font-weight: bold;
+}
+.info-comm .main .btn-delete {
+  color: #f0fa9a;
+  text-align: center;
+  font-size: 10pt;
+}
+.info-comm .main:hover {
+  cursor: pointer;
+  background-color: #000000;
+}
+.info-comm .main.new {
+  background-color: #a10c0ca9;
+}
+.info-comm .main .type[data-type="1"] {
+  background-color: #49e202;
+  color: white;
+}
+.info-comm .main .type[data-type="2"] {
+  background-color: #d1d1d1;
+  color: #777777;
+}
+.info-comm .main .type[data-type="3"] {
+  background-color: #0d838b;
+  color: white;
+}
+.info-comm .main .type[data-type="4"] {
+  background-color: #18e4f3;
+  color: #5e5e5e;
+}
+.info-comm .main .type[data-type="5"] {
+  background-color: #f8f41c;
+  color: red;
+}
+.info-comm .main .type[data-type="6"] {
+  background-color: #ff7f07;
+  color: white;
+}
+.info-comm .main .type[data-type="7"] {
+  background-color: #f34bd7;
+  color: white;
+}
+.info-comm .main .type[data-type="8"] {
+  background-color: #0d838b;
+  color: white;
 }
 .info-comm .main > * {
   padding: 2px;
-  border: 1px solid yellow;
 }
-.info-comm .main > :nth-child(1) {
-  background-color: rgba(0, 0, 0, 0.637);
-}
-.info-comm .main > :nth-child(4) {
+.info-comm .main > :nth-child(5) {
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.info-comm .main > :nth-child(5) {
-  grid-column: 1/5;
+.info-comm .main > :nth-child(7) {
+  grid-column: 1/7;
   grid-row: 2;
   background-color: rgba(209, 24, 24, 0.808);
 }
-.info-comm .main:not(.open) > :nth-child(5) {
+.info-comm .main:not(.open) > :nth-child(7) {
   display: none;
 }
 .info-comm .main > .detail {
