--- a/css/gt.css
+++ b/css/gt.css
@@ -592,6 +592,9 @@ form {
   display: none;
 }
 
+.sg-menu.comm-menu .item[data-value="2"] {
+  display: none !important;
+}
 .sg-menu.comm-menu .item a .image {
   background-repeat: no-repeat;
   background-position: center center;
@@ -700,9 +703,9 @@ form {
   color: #f4f7e0;
   background-color: #3a3a3aa9;
   display: grid;
-  grid-gap: 4px;
-  grid-template-columns: 20px repeat(3, 70px) auto 20px;
-  grid-template-rows: auto auto;
+  grid-gap: 2px;
+  grid-template-columns: 20px 70px 50px 50px auto 20px;
+  grid-template-rows: 1.4em auto;
   overflow: hidden;
 }
 .info-comm .main .btn-new {
@@ -772,6 +775,90 @@ form {
   display: none;
 }
 .info-comm .main > .detail {
+  display: grid;
+  grid-gap: 4px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+}
+
+.info-comm-units .main {
+  font-size: 9pt;
+  color: #f4f7e0;
+  background-color: #3a3a3aa9;
+  display: grid;
+  grid-gap: 2px;
+  grid-template-columns: 20px 70px 50px 90px 90px 0px;
+  grid-template-rows: 1.4em auto;
+  overflow: hidden;
+  border-bottom: 1px solid white;
+}
+.info-comm-units .main .btn-new {
+  color: #1cbaf8;
+  text-align: center;
+  font-size: 10pt;
+  font-weight: bold;
+}
+.info-comm-units .main .btn-delete {
+  color: #f0fa9a;
+  text-align: center;
+  font-size: 10pt;
+}
+.info-comm-units .main:hover {
+  cursor: pointer;
+  background-color: #000000;
+}
+.info-comm-units .main.new {
+  background-color: #a10c0ca9;
+}
+.info-comm-units .main .type[data-type="1"] {
+  background-color: #49e202;
+  color: white;
+}
+.info-comm-units .main .type[data-type="2"] {
+  background-color: #d1d1d1;
+  color: #777777;
+}
+.info-comm-units .main .type[data-type="3"] {
+  background-color: #0d838b;
+  color: white;
+}
+.info-comm-units .main .type[data-type="4"] {
+  background-color: #18e4f3;
+  color: #5e5e5e;
+}
+.info-comm-units .main .type[data-type="5"] {
+  background-color: #f8f41c;
+  color: red;
+}
+.info-comm-units .main .type[data-type="6"] {
+  background-color: #ff7f07;
+  color: white;
+}
+.info-comm-units .main .type[data-type="7"] {
+  background-color: #f34bd7;
+  color: white;
+}
+.info-comm-units .main .type[data-type="8"] {
+  background-color: #0d838b;
+  color: white;
+}
+.info-comm-units .main > * {
+  padding: 2px;
+}
+.info-comm-units .main > :nth-child(5) {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.info-comm-units .main > :nth-child(7) {
+  grid-column: 1/7;
+  grid-row: 2;
+  background-color: rgba(209, 24, 24, 0.808);
+}
+.info-comm-units .main:not(.open) > :nth-child(7) {
+  display: none;
+}
+.info-comm-units .main > .detail {
   display: grid;
   grid-gap: 4px;
   grid-template-columns: 1fr 1fr;
