--- a/css/gt.css
+++ b/css/gt.css
@@ -545,8 +545,16 @@ form {
   background-image: url(../images/pentagon.png);
 }
 
+.icon-alarm {
+  background-image: url(../images/clock_001.png);
+}
+
 .icon-clock_001 {
   background-image: url(../images/clock_001.png);
+}
+
+.icon-history {
+  background-image: url(../images/calendar.png);
 }
 
 .icon-calendar {
@@ -707,7 +715,7 @@ form {
   background-color: #3a3a3aa9;
   display: grid;
   grid-gap: 0px;
-  grid-template-columns: 20px 70px 50px 50px auto 20px;
+  grid-template-columns: 20px 70px 50px 90px auto;
   grid-template-rows: 1.4em auto;
   overflow: hidden;
 }
@@ -764,17 +772,17 @@ form {
 .info-comm .main > * {
   padding: 2px;
 }
-.info-comm .main > :nth-child(5) {
+.info-comm .main > :nth-child(4) {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.info-comm .main > :nth-child(7) {
+.info-comm .main > :nth-child(6) {
   grid-column: 1/7;
   grid-row: 2;
   background-color: rgba(209, 24, 24, 0.808);
 }
-.info-comm .main:not(.open) > :nth-child(7) {
+.info-comm .main:not(.open) > :nth-child(6) {
   display: none;
 }
 .info-comm .main > .detail {
